--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
 <html>
 	<head>
 		<title>ListaVip.link</title>
+		<meta property="og:title" content="ListaVip.link">
+		<meta property="og:locale" content="pt_BR">
+		<meta name="description" content="https://telegram.me/ListaVipBot">
+		<meta property="og:description" content="https://telegram.me/ListaVipBot">
+		<link rel="canonical" href="https://listavip.link/">
+		<meta property="og:url" content="https://listavip.link/">
+		<meta property="og:site_name" content="ListaVIP">
+		<meta name="twitter:card" content="summary">
+		<meta property="twitter:image" content="images/pare.png">
+		<meta property="twitter:title" content="ListaVip.link">
+		<meta name="twitter:site" content="@gabrf">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
