--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in" id="second">
 						<div class="content">
 							<h2>Pare com a verificação manual!</h2>
-							<p>O robô se comunica automaticamente com a Hotmart e faz o controle de acesso ao grupo ou ao canal.</p>
+							<p>O robô se comunica automaticamente com a ferramenta de pagamento e faz o controle de acesso ao grupo ou ao canal do Telegram.</p>
 							<ul class="actions stacked">
 								<li><a href="#third" class="icon solid style2 smooth-scroll-middle fa-chevron-down"></a></li>
 							</ul>
@@ -84,6 +84,32 @@
 							<img src="images/share.gif" alt="" />
 						</div>
 					</section>
+
+
+					<section class="wrapper style1 align-center content-align-middle image-position-left onscroll-image-fade-in onscroll-fade-in" id="fourth">
+						<div class="inner">
+							<h2>Compatível com</h2>
+						</div>
+						<div class="gallery style2 medium onscroll-fade-in onscroll-image-fade-in">
+							<article>
+							        <img src="images/hotmart.png" alt="Hotmart">
+								<div class="caption"><h3>Hotmart</h3></div>
+							</article>
+							<article>
+							        <img src="images/eduzz.png" alt="Eduzz">
+								<div class="caption"><h3>Eduzz</h3></div>
+							</article>
+							<article>
+							        <img src="images/monetizze.jpg" alt="Monetizze">
+								<div class="caption"><h3>Monetizze</h3></div>
+							</article>
+							<article>
+							        <img src="images/picpay.png" alt="PicPay">
+								<div class="caption"><h3>PicPay</h3></div>
+							</article>
+						</div>
+					</section>
+
 
 				<!-- Five -->
 					<section class="wrapper style1 align-center" id="contact">
