--- a/index.html
+++ b/index.html
@@ -5,154 +5,146 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-	<head>
-		<title>ListaVip.link</title>
-		<meta property="og:title" content="ListaVip.link">
-		<meta property="og:locale" content="pt_BR">
-		<meta name="description" content="https://telegram.me/ListaVipBot">
-		<meta property="og:description" content="https://telegram.me/ListaVipBot">
-		<link rel="canonical" href="https://listavip.link/">
-		<meta property="og:url" content="https://listavip.link/">
-		<meta property="og:site_name" content="ListaVIP">
-		<meta name="twitter:card" content="summary">
-		<meta property="twitter:image" content="images/pare.png">
-		<meta property="twitter:title" content="ListaVip.link">
-		<meta name="twitter:site" content="@gabrf">
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-	</head>
-	<body class="is-preload">
-
-		<!-- Wrapper -->
-			<div id="wrapper" class="divided">
-
-				<!-- One -->
-<section class="banner onload-image-fade-in onload-content-fade-right style3 fullscreen orient-right content-align-left image-position-center">
-						<div class="content">
-							<h2>Somente pessoas autorizadas</h2>
-						<ul class="icons">
-								<li><a href="#first" class="icon solid style2 smooth-scroll-middle fa-chevron-down"></a></li>
-							</ul>
-						</div>
-						<div class="image">
-							<img src="images/pare.png" alt="">
-						</div>
-					</section>
-				<!-- Two -->
-					<section class="spotlight style1 orient-right content-align-left image-position-left onscroll-image-fade-in" id="first">
-						<div class="content">
-							<h2>Automatize!</h2>
-							<p>Se a venda é automática, por que o controle de acesso não é?</p>
-							<ul class="actions stacked">
-								<li><a href="#second" class="icon solid style2 smooth-scroll-middle fa-chevron-down"></a></li>
-							</ul>
-						</div>
-						<div class="image">
-							<img src="images/line.jpg" alt="" />
-						</div>
-					</section>
-
-				<!-- Three -->
-					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in" id="second">
-						<div class="content">
-							<h2>Pare com a verificação manual!</h2>
-							<p>O robô se comunica automaticamente com a ferramenta de pagamento e faz o controle de acesso ao grupo ou ao canal do Telegram.</p>
-							<ul class="actions stacked">
-								<li><a href="#third" class="icon solid style2 smooth-scroll-middle fa-chevron-down"></a></li>
-							</ul>
-						</div>
-						<div class="image">
-							<img src="images/faceid.gif" alt="" />
-						</div>
-					</section>
-
-				<!-- Four -->
-					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="third">
-						<div class="content">
-							<h2>Controle eficiente</h2>
-							<p>O robô não dorme e não entra de férias.</p>
-							<p>O acesso é feito uma vez e não pode ser compartilhado!</p>
-							<p>Parou de pagar? Automaticamente o robô remove a pessoa.</p>
-							<ul class="actions">
-								<li><a href="#contact" class="button smooth-scroll-middle">Fale comigo</a></li>
-								<li><a href="https://t.me/ListaVipBot" class="button">Teste agora!</a></li>
-							</ul>
-						</div>
-						<div class="image">
-							<img src="images/share.gif" alt="" />
-						</div>
-					</section>
-
-
-					<section class="wrapper style1 align-center content-align-middle image-position-left onscroll-image-fade-in onscroll-fade-in" id="fourth">
-						<div class="inner">
-							<h2>Compatível com</h2>
-						</div>
-						<div class="gallery style2 medium onscroll-fade-in onscroll-image-fade-in">
-							<article>
-							        <img src="images/hotmart.png" alt="Hotmart">
-								<div class="caption"><h3>Hotmart</h3></div>
-							</article>
-							<article>
-							        <img src="images/eduzz.png" alt="Eduzz">
-								<div class="caption"><h3>Eduzz</h3></div>
-							</article>
-							<article>
-							        <img src="images/monetizze.jpg" alt="Monetizze">
-								<div class="caption"><h3>Monetizze</h3></div>
-							</article>
-							<article>
-							        <img src="images/picpay.png" alt="PicPay">
-								<div class="caption"><h3>PicPay</h3></div>
-							</article>
-						</div>
-					</section>
-
-
-				<!-- Five -->
-					<section class="wrapper style1 align-center" id="contact">
-						<div class="inner">
-							<h2>Entre em contato!</h2>
-							<a href="https://t.me/gabrielrf"><p>https://telegram.me/GabrielRF</p></a>
-						</div>
-					</section>
-					<footer class="wrapper style1 align-center">
-
-						<div class="inner">
-							<ul class="icons">
-								<li><a href="https://gabrf.com" class="icon style2 solid fa-home"><span class="label">Website</span></a></li>
-								<li><a href="https://t.me/GabrielRF" class="icon style2 fa-paper-plane"><span class="label">Telegram</span></a></li>
-								<li><a href="https://github.com/GabrielRF" class="icon brands style2 fa-github"><span class="label">GitHub</span></a></li>
-								<li><a href="https://twitter.com/GabRF" class="icon brands style2 fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="https://www.linkedin.com/in/gabrielrochaferreira" class="icon brands style2 fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-							</ul>
-							<p>© Gabriel R F. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
-						</div>
-
-					</footer>
-
-
-			</div>
-
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
-                        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-49523711-9"></script>
-                        <script>
-                            window.dataLayer = window.dataLayer || [];
-                            function gtag(){dataLayer.push(arguments);}
-                            gtag('js', new Date());
-
-                            gtag('config', 'UA-49523711-9');
-                        </script>
-
-
-	</body>
+    <head>
+        <title>ListaVip.link</title>
+	<meta property="og:title" content="ListaVip.link">
+	<meta property="og:locale" content="pt_BR">
+	<meta name="description" content="https://telegram.me/ListaVipBot">
+	<meta property="og:description" content="https://telegram.me/ListaVipBot">
+	<link rel="canonical" href="https://listavip.link/">
+	<meta property="og:url" content="https://listavip.link/">
+	<meta property="og:site_name" content="ListaVIP">
+	<meta name="twitter:card" content="summary">
+	<meta property="twitter:image" content="images/pare.png">
+	<meta property="twitter:title" content="ListaVip.link">
+        <meta name="twitter:site" content="@gabrf">
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<link rel="stylesheet" href="assets/css/main.css" />
+	<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+    </head>
+    <body class="is-preload">
+        <div id="wrapper" class="divided">
+            <section class="banner onload-image-fade-in onload-content-fade-right style3 fullscreen orient-right content-align-left image-position-center">
+	        <div class="content">
+		    <h2>Somente pessoas autorizadas</h2>
+		    <p>Controle automaticamente o acesso ao seu grupo ou canal do Telegram!</p>
+		    <ul class="icons">
+		        <li><a href="#first" class="icon solid style2 smooth-scroll-middle fa-chevron-down"></a></li>
+		    </ul>
+		</div>
+		<div class="image">
+		    <img src="images/pare.png" alt="">
+		</div>
+	    </section>
+	    <section class="spotlight style1 orient-right content-align-left image-position-left onscroll-image-fade-in" id="first">
+	        <div class="content">
+		    <h2>Automatize!</h2>
+		    <p>Se a venda é automática, por que o controle de acesso não é?</p>
+	            <ul class="actions stacked">
+		        <li><a href="#second" class="icon solid style2 smooth-scroll-middle fa-chevron-down"></a></li>
+		    </ul>
+		</div>
+		<div class="image">
+	            <img src="images/line.jpg" alt="" />
+		</div>
+	    </section>
+	    <section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in" id="second">
+	        <div class="content">
+		    <h2>Pare com a verificação manual!</h2>
+		    <p>O robô se comunica automaticamente com a ferramenta de pagamento e faz o controle de acesso ao grupo ou ao canal do Telegram.</p>
+	            <ul class="actions stacked">
+		        <li><a href="#third" class="icon solid style2 smooth-scroll-middle fa-chevron-down"></a></li>
+                    </ul>
+		</div>
+		<div class="image">
+		    <img src="images/faceid.gif" alt="" />
+		</div>
+	    </section>
+	    <section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="third">
+	        <div class="content">
+		    <h2>Controle eficiente</h2>
+		    <p>O robô não dorme e não entra de férias.</p>
+		    <p>O acesso é feito uma vez e não pode ser compartilhado!</p>
+		    <p>Parou de pagar? Automaticamente o robô remove a pessoa.</p>
+		    <ul class="actions stacked">
+		        <li><a href="#fourth" class="icon solid style2 smooth-scroll-middle fa-chevron-down"></a></li>
+		    </ul>
+		</div>
+		<div class="image">
+		    <img src="images/share.gif" alt="" />
+		</div>
+	    </section>
+	    <section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in" id="fourth">
+	        <div class="content">
+		    <h2>Bot personalizado</h2>
+		    <p>Tenha um robô com a sua marca!</p>
+		    <p>Bot com a sua logo e com mensagens customizadas.</p>
+		    <p>Possibilidade de verificar o cliente via link no checkout da compra.</p>
+		    <ul class="actions">
+		        <li><a href="#contact" class="button smooth-scroll-middle">Fale comigo</a></li>
+			<li><a href="https://t.me/ListaVipBot" class="button">Teste agora!</a></li>
+		    </ul>
+		</div>
+		<div class="image">
+		    <img src="images/ListaVipBot.gif" alt="" />
+		</div>
+	    </section>
+	    <section class="wrapper style1 align-center content-align-middle image-position-left onscroll-image-fade-in onscroll-fade-in" id="fifth">
+	        <div class="inner">
+		    <h2>Compatível com</h2>
+		</div>
+		<div class="gallery style2 medium onscroll-fade-in onscroll-image-fade-in">
+	            <article>
+	                <img src="images/hotmart.png" alt="Hotmart">
+			<div class="caption"><h3>Hotmart</h3></div>
+		    </article>
+		    <article>
+		        <img src="images/eduzz.png" alt="Eduzz">
+			<div class="caption"><h3>Eduzz</h3></div>
+	            </article>
+		    <article>
+		        <img src="images/monetizze.jpg" alt="Monetizze">
+			<div class="caption"><h3>Monetizze</h3></div>
+		    </article>
+		    <article>
+			<img src="images/picpay.png" alt="PicPay">
+			<div class="caption"><h3>PicPay</h3></div>
+		    </article>
+		</div>
+	    </section>
+	    <section class="wrapper style1 align-center" id="contact">
+	        <div class="inner">
+                    <h2>Entre em contato!</h2>
+		    <a href="https://telegram.me/GabrielRF"><p>https://telegram.me/GabrielRF</p></a>
+		</div>
+	    </section>
+            <footer class="wrapper style1 align-center">
+	        <div class="inner">
+		    <ul class="icons">
+		        <li><a href="https://gabrf.com" class="icon style2 solid fa-home"><span class="label">Website</span></a></li>
+			<li><a href="https://t.me/GabrielRF" class="icon style2 fa-paper-plane"><span class="label">Telegram</span></a></li>
+			<li><a href="https://github.com/GabrielRF" class="icon brands style2 fa-github"><span class="label">GitHub</span></a></li>
+			<li><a href="https://twitter.com/GabRF" class="icon brands style2 fa-twitter"><span class="label">Twitter</span></a></li>
+			<li><a href="https://www.linkedin.com/in/gabrielrochaferreira" class="icon brands style2 fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+                    </ul>
+		    <p>© Gabriel R F. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+                </div>
+            </footer>
+        </div>
+	<script src="assets/js/jquery.min.js"></script>
+	<script src="assets/js/jquery.scrollex.min.js"></script>
+        <script src="assets/js/jquery.scrolly.min.js"></script>
+	<script src="assets/js/browser.min.js"></script>
+	<script src="assets/js/breakpoints.min.js"></script>
+	<script src="assets/js/util.js"></script>
+	<script src="assets/js/main.js"></script>
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-49523711-9"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+            gtag('config', 'UA-49523711-9');
+        </script>
+    </body>
 </html>
